--- a/src/Home/Infrastructure/UI/Symfony/View/Twig/home.twig
+++ b/src/Home/Infrastructure/UI/Symfony/View/Twig/home.twig
@@ -31,8 +31,8 @@
             margin-bottom: 20px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
-            max-width: 600px; /* Ajustado para mayor amplitud */
-            width: 80%; /* Ajustado para que ocupe más espacio */
+            max-width: 600px;
+            width: 80%;
         }
 
         .api-meta p, .api-description p {
